# hermes-autoroute

./: README.md  pyproject.toml
plugins/autoroute/: __init__.py  plugin.yaml
plugins/model-providers/autoroute/: __init__.py  plugin.yaml
scripts/: install.sh
src/hermes_autoroute/: __init__.py  catalog.py  cli.py  commands.py  config.py  hermes_plugin.py  http.py  probes.py  provider.py  router.py  scanner.py  scoring.py  server.py  storage.py  types.py
tests/: test_http.py  test_scoring.py  test_storage.py
